tests/script_errors/invalid_const_unary/error.txt
Error: 
    1 | - false
      | ^^^^^^^ The unary operation `-` is not defined for the type `boolean`